sources/css/general.css
/* ... */
tr.super > .enseignant, tr.formation > .enseignant {
    min-width: 150px;
    border-right: 0px;    
    border-left: 0px;
}

tr.super > .totaux, tr.formation > .totaux {
    min-width: 500px;
    width: 500px;
    border-right: 0px;    
    border-left: 0px;
}

td.nopadding {
    padding: 0px;
}

.descriptif {
    min-width: 140px;
}

.cm, .td, .tp, .alt, .groupe, .htd, .inscrits, .presents, .tirage, 
.choix_htd, .tranche_htd {
    min-width:30px;
    max-width:60px;
}
.debut, .fin {
    min-width: 30px;
    width: 70px;
}

.semestre {
   max-width: 80px;
} 

.credits {
   width: 80px;
} 

.code_geisha {
    width:70px;
}

.laction {
    width: 0px;
    padding-left: 0px;
    padding-right: 0px; 
}

.modification {
    display: none;
}

.categorie {
    width: 120px;
    text-align: center;
}

.service_annuel  {
    width: 80px;
}

.service_reel  {
    width: 100px;
}

td.service_annuel, td.service_reel  {
    text-align:right;
}

.annee_universitaire {
    width: 70px;
    text-align: center;
}

/* dimensions pour les tranches */
.remarque {
    width: 140px;
}

.type_conversion {
    width: 100px;
}

/**** FIN DIMENSIONS ****/

.semestre, .credits, .cm, .td, .tp, .alt, .code_geisha, .action, .groupe, .htd, .choix_htd, .tranche_htd {
    text-align: center;
}

th.titre {
    text-align: left;
}
th.label {
    text-align: right;
}

th.stats {
}

td.tranches, td.services {
    padding-top: 0px;
    padding-right: 0px;
}

/******* toutes les bascules *******/

div.basculeOff, div.basculeOn {
    float:left; 
    cursor: pointer;
    width: 20px;
    height: 20px;
}

div.basculeOff {
    background-image: url(img/triangleLR.png);
}
div.basculeOff:hover {
    background-image: url(img/triangleLRp.png);
}
div.basculeOn {
    background-image: url(img/triangleTD.png);
}
div.basculeOn:hover {
    background-image: url(img/triangleTDp.png);
}

td.laction > div.basculeOff, td.laction > div.basculeOn {
    margin-left: -30px;
}

.micropalette {
    float: left;
    margin: -32px;
    width: 0px;
    height: 0px;
}

.basculeOff + .micropalette {
    display:none;
}

.globalHistoOn, .globalHistoOff {
    position: relative;
    cursor: pointer;
    top: 10px;
    width: 22px;
    height: 22px;
}

.globalHistoOn:hover, .globalHistoOff {
    background-image: url(img/touthisto2.png);
}

.globalHistoOn, .globalHistoOff:hover {
    background-image: url(img/touthisto1.png);    
}

.histoOn, .histoOff {
    position: relative;
    top: 60px;
    left: 5px;
    width: 16px;
    height: 13px;
    cursor: pointer;
}

.histoOn:hover, .histoOff {
    background-image: url(img/histo2.png);
}

.histoOn, .histoOff:hover {
    background-image: url(img/histo1.png);    
}

.logOn, .logOff {
    position: relative;
    top: 65px;
    left: 3px;
    width: 18px;
    height: 18px;
    cursor: pointer;
}

.logOff:hover, .logOn {
    background-image: url(img/log2.png);
}
.logOff, .logOn:hover {
    background-image: url(img/log1.png);
}

.logsformationtmp {
    position: absolute;
}

/******** barres de cours *********/


tr.imgcours, td.imgcours, div.imgcours {
    padding: 0px;
    border-width: 0px;
    margin: 0px;
    margin-top: -1px;
    height: 0px;
}

div.imgcours {    
    float: left;
    background-repeat: no-repeat;    
}

div.imgcours img.imgbarre {     
    opacity: 0.7; 
    position: absolute;
}

tr.imgformation, td.imgformation, div.imgformation {
    padding: 0px;
    border-width: 0px;
    margin: 0px;
    margin-top: -1px; 
    height: 0px;
}

div.imgformation {    
    float: left;
    background-repeat: no-repeat;    
}

div.imgformation img.imgbarre {     
    opacity: 0.9;
    position: absolute;
}

span.totaux {
    float: right;
    width: 500px;
}

div.tip {
    font-family:monospace;
    width: 300px;
}

a.enseignant {
    text-decoration: none;
    color: inherit;    
}

a.enseignant:hover {
    text-decoration: underline;
}

/* NE FONCTIONNE PAS
a {
    max-width: 50px;
    overflow: hidden; 
    -o-text-overflow: ellipsis;
    text-overflow: ellipsis;
}
*/

a.url > span.url {
    display: none;
}

a.url > span.urlicon:after {
    content:"lien";
}

/* aide-memoire ---
A:link {text-decoration: none}
A:visited {text-decoration: none}
A:active {text-decoration: none}
A:hover {text-decoration: underline; color: red;}
*/

.clear {
    clear: both;
}

/* STATS */
.statens {
    border-style: solid;
    border-width: 2px;
    float: left;
    padding: 2px;
    margin: 2px;
}
div.lstatens1, div.rstatens1 {
    float: left;
    min-width: 10px;
/*    width:140px; */
}

.statens .legende {
    font-size: 9px;
    font-family:monospace;
    float: left;
}

.statens .barre {
    height: 10px;
    width: 0px;
    min-width: 0px;
    float: left;
}

.statens .barrecont {
    min-height: 10px;
}

.statens .barrecont {
    clear: both;
}

.statens1 .barrecont {
    border-width: 1px;
    border-style: solid;
}

.lstatens1 .barre {
    float: right;
}

.rstatens1 .legende {
    float: right;
}

.rstatens1 .barre {
    float: left;
}

.lstatens1 .barrecont {
    border-left: none;
}

.rstatens1 .barrecont {
    border-right: none;
}

.statens2 .legende {
        border-right-width: 2px;
	border-right-style: solid;
}

.statens2 .barrecont .legende {
    float: left;
    border-bottom-width: 2px;
    border-bottom-style: solid;
}

.statens2 .barrecont + .barrecont .legende {
    border-bottom-width: 0px;
}

.statens2 {
    padding-top: 5px;
}

.statens .td {
        opacity: .80; 
}
.statens .tp {
        opacity: .60; 
}
.statens .alt {
        opacity: .40; 
}

.statens .ccm {
    border-right-width: 1px;
    border-right-style: solid;
}

.lstatens1 .ccm {
    border-right: 0px;
    border-left-width: 1px;
    border-left-style: solid;
}

.vignette {
    position: fixed;
    bottom: 5px;
    right: 5px;
}
/* LOGS */

.historique {
    font-size: 10pt;
    font-family: monospace;
}

.historique div.timestamp {
    float: left;
    padding-right: 0.5em;
    font-weight: bolder;
    height: 100%;
}
/* ... */

